# espada

./: .gitignore  .releaserc  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: check.yml  publish.yml
benches/: base.rs  medium.rs  small.rs
examples/multi-thread/: main.rs  scope.rs
examples/single-thread/: main.rs
src/: card.rs  card_set.rs  evaluator.rs  hand_range.rs  lib.rs  made_hand.rs  rank.rs  rank_pair.rs  rank_range.rs  showdown.rs  suit.rs  suit_range.rs
src/card/: card.rs  rank.rs  rank_range.rs  suit.rs  suit_range.rs
src/evaluator/: dp_table.rs  flop_exhaustive.rs  made_hand.rs  postflop_exhaustive.rs  showdown.rs
src/evaluator/snapshots/: espada__evaluator__flop_exhaustive__tests__iterator__it_iterates_scoped_from_0_1_to_2_25.snap  espada__evaluator__flop_exhaustive__tests__iterator__it_iterates_scoped_from_10_43_to_14_18.snap  espada__evaluator__flop_exhaustive__tests__iterator__it_iterates_scoped_from_32_48_to_47_49.snap
src/hand_range/: card_pair.rs  hand_range.rs  hand_range_token.rs  rank_pair.rs
src/hand_range/snapshots/: espada__hand_range__hand_range_token__tests__into_iter__it_iterates_bottom_closed_ofsuit_pair_range.snap  espada__hand_range__hand_range_token__tests__into_iter__it_iterates_bottom_closed_pocket_pair_range.snap  espada__hand_range__hand_range_token__tests__into_iter__it_iterates_bottom_closed_suited_pair_range.snap  espada__hand_range__hand_range_token__tests__into_iter__it_iterates_double_closed_ofsuit_pair_range.snap  (+6 more)
