[package]
name = "espada"
version = "0.2.0"
description = "Texas Hold'em poker odds evaluator"
categories = ["games", "mathematics", "simulation"]
keywords = ["poker", "texas-holdem"]
repository = "https://github.com/axross/espada"
documentation = "https://docs.rs/espada"
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
regex = "1.10.3"

[dev-dependencies]
cargo-insta = "1.36.1"
criterion = { version = "0.4", features = ["html_reports"] }
insta = "1.36.1"
num_cpus = "1.16.0"

[[bench]]
name = "base"
harness = false
